--- a/public/track_template.css
+++ b/public/track_template.css
@@ -10,7 +10,6 @@ body{
     height: 100vh;
     margin: 0 auto 0;
     transition: all .2s ease-in-out;
-
     background: hsla(0, 0%, 12%, 1);
 
     background: linear-gradient(360deg, hsla(0, 0%, 12%, 1) 0%, hsla(0, 0%, 26%, 1) 100%);
@@ -24,244 +23,90 @@ body{
 
 aside{
     margin-right: auto ;
-    margin: 2% ;
+    margin: 2% 0 0 1%;
     border-radius: 1rem;
     position: fixed;
-    height: auto;
+    height: 90%;
     width: 25%;
-    z-index:10;
     border-right: 1px groove #333333;
-    /* box-shadow: 0 0 3px rgb(183, 185, 190, .4); */
+    box-shadow: 0 0 2px inset rgba(172, 172, 173, 0.2);
 }
 
-@media  only screen and (max-width : 1084px) {
-     aside {
-       width: 100%;
-       bottom: 10%;
-       height: 3rem;
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       flex-direction: column;
-      
-       background-color: #262626;
-       margin:auto;
-     }
-}
-aside .backHome {
-
-    display: block;
-    text-align: center;
-    outline: none;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    padding: .5em;
-}
-
-aside .backHome a svg{
-    fill: #FFFFFF;
-}
-
-.playing_audio_card{
-    width: 100%;
-    height: 35rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    padding: .4em;
-    position: relative;
-}
-
-
-
-.playing_audio_card .audio_cover{
-    width: 100%;
-    height: 20em;
-    margin-bottom: auto;
-    border-radius: 1em;
-    overflow: hidden;
-}
-
-
-
-@media  only screen and (max-width : 1084px) {
-    .playing_audio_card {
-      width: 100%;
-      height: 10rem;
-      margin: 0 auto 0;
-      background-color: #262626;
+@media  only screen and (max-width : 900px) {
+   aside{
+       display: none;
     }
+    
 
    
-    .playing_audio_card .audio_cover{
-        position: absolute;
-        width: 8em;
-        height: 8em;
-        right: 1%;
-        bottom: 3%;
-    }
-
-    .playing_audio_card .progress_bar{
-        width: 10%;
-        /* display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        margin-bottom: 3em; */
-    }
 }
 
-@media  only screen and (max-width : 600px) {
-    .playing_audio_card .audio_cover{
-       
-        width: 5em;
-        height: 5em;
-        right: 3%;
-        bottom: 15%;
-    }
+aside .head{
+    width: 100%;
+    text-align: center;
+    padding: 1rem;
+}
+
+aside .head h1 {
+    font-size: 2.4rem;
+    letter-spacing: .2em;
+    color: #FFFFFF;
+    font-family: 'Oswald', sans-serif;
 }
 
 
-.playing_audio_card .audio_cover img{
+aside nav {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    padding: 1rem;
 }
 
-.playing_audio_card .audio_details{
+
+
+aside nav ul {
+
+    list-style-type: none;
     width: 100%;
-    text-align: left;
-    padding: 1em;
-}
-
-.playing_audio_card .audio_details a {
-    color: #FFFFFF;
-    text-decoration: none;
-    text-transform: capitalize;
-    font-size: 1.2em;
-}
-
-.playing_audio_card .audio_details .artists{
-    padding: .4em 0;
-}
-
-.playing_audio_card .audio_details .artists a{
-    display: inline-block;
-    color: #FFFFFF;
-    text-decoration: none;
-    margin: 0 .1rem 0;
-    text-transform: capitalize;
-    font-size: .6rem;
-}
-
-
-@media  only screen and (max-width : 1084px) {
-    .playing_audio_card .audio_details  {
-     position: absolute;
-     padding: 0;
-     top: 40%;
-     left: 1%;
-     height: 3.1em;
-    }
-}
-
-@media  only screen and (max-width : 600px) {
-    .playing_audio_card .audio_details  {
-   
-     width: 10em;
-     max-width: 15rem;
-     overflow: hidden;
-     word-wrap: nowrap;
-     white-space: nowrap;
-     text-overflow: ellipsis;
-    }
-}
-
-
-
-.playing_audio_card .progress_bar{
-    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    margin-bottom: 3em;
+    justify-content: flex-start;
+    align-items: left;
 }
 
-.playing_audio_card .progress_bar input{
-    width: 100%;
-    -webkit-appearance: none;
-    appearance: none;
-    height: .5em;
-    background-color: hsl(24, 80%, 50%);
-    outline: none;
-    border-radius: .2em;
-    cursor:pointer;
-}
 
-@media  only screen and (max-width : 1084px) {
-   
+aside nav ul li {
 
-    .playing_audio_card .progress_bar{
-        width: 50%;
-        
-    }
-}
-
-.playing_audio_card .progress_bar .loopBtn{
-    display: flex;
-    justify-content: right;
-    align-items: center;
+    margin:  1rem 0;
     padding: .5em;
     width: 100%;
-}
-
-.playing_audio_card .progress_bar .loopBtn button {
-    /* margin: 0 .7em; */
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-}
-.playing_audio_card .progress_bar .loopBtn button svg {
-   fill: #d6d6d6;
-}
-
-.playing_audio_card .progress_bar .loopBtn button.active{
-    background-color: #FFFFFF ;
-    transition: background-color .2s ease-in-out;
-    border-radius: .2em;
-}
-.playing_audio_card .progress_bar .loopBtn button.active svg{
-    fill: #262626 ;
-    transition: .2s ease-in-out;
-
+    height: 3rem;
+    background-color: #333333;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    border-radius: .3em;
 }
 
 
-
-
-
-.playing_audio_card .controls_btns{
-    width: 100%;
-    text-align: center;
+aside nav ul li a{
+  text-decoration: none;
+  outline: none;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
 
-.playing_audio_card .controls_btns button {
-    outline: none;
-    display: inline-block;
-    text-align: center;
-    margin: 0 1.5rem;
-    background-color: transparent;
-    border: none;
-    box-shadow:0 0 3px rgba(142, 142, 143, 0.2);
-    cursor: pointer;
+aside nav ul li a p {
+  color: #FFFFFF;
+  display: inline-block;
+  margin-left: 1em;
 }
 
-.playing_audio_card .controls_btns button svg {
-    fill: #FFFFFF;
+aside nav ul li a svg {
+    fill: #ccc;
 }
+
 
 section {
     float: right;
