--- a/public/template.css
+++ b/public/template.css
@@ -22,6 +22,10 @@ body{
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#1E1E1E", endColorstr="#757575", GradientType=1 );
 }
 
+html {
+    text-transform: capitalize;
+}
+
 aside{
     margin-right: auto ;
     margin: 2% ;
