--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,10 @@ body{
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#1E1E1E", endColorstr="#757575", GradientType=1 );
 }
 
+html {
+    text-transform: capitalize;
+}
+
 aside{
     margin-right: auto ;
     margin: 2% 0 0 1%;
